--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,9 +17,18 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Welcome to My Website</h1>
-            <p>Hi, I'm [Your Name]! Explore my projects, learn about my skills, and download my resume.</p>
+        <section class="projects-section">
+            <h1>My Projects</h1>
+            <ul>
+                <li>
+                    <h2>Project 1</h2>
+                    <p>Description of the project. <a href="#">View Project</a></p>
+                </li>
+                <li>
+                    <h2>Project 2</h2>
+                    <p>Description of the project. <a href="#">View Project</a></p>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
@@ -27,4 +36,3 @@
     </footer>
 </body>
 </html>
-
