--- a/resume.html
+++ b/resume.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,9 +17,11 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Welcome to My Website</h1>
-            <p>Hi, I'm [Your Name]! Explore my projects, learn about my skills, and download my resume.</p>
+        <section class="resume-section">
+            <h1>My Resume</h1>
+            <p>View or download my resume below:</p>
+            <a href="resume.pdf" download>Download Resume (PDF)</a>
+            <iframe src="resume.pdf" width="100%" height="600px"></iframe>
         </section>
     </main>
     <footer>
@@ -27,4 +29,3 @@
     </footer>
 </body>
 </html>
-
