--- a/about.html
+++ b/about.html
@@ -19,9 +19,10 @@
     <main>
         <section class="about-section">
             <h1>About Me</h1>
-            <p>Hello! I’m [Your Name], a passionate developer and aspiring AI engineer. I’m currently completing my bachelor’s in Computer Science at SFSU, with plans to pursue a PhD in AI-related fields.</p>
-            <p>I’m deeply interested in AI, cybersecurity, and web development, and I enjoy solving complex problems and building impactful projects. My ultimate goal is to work on cutting-edge AI technologies in security-focused roles.</p>
-            <p>Outside of tech, I’m committed to lifelong learning and hope to work well into my 70s or 80s. I also dream of building a large family and making a positive impact on the world.</p>
+            <p>Hello! I’m [Your Name], a developer passionate about combining technology and creativity. Currently completing my bachelor’s degree in Computer Science at SFSU, I aspire to contribute to cutting-edge advancements in artificial intelligence and cybersecurity.</p>
+            <p>I have a deep interest in problem-solving and building impactful projects. My career goals include pursuing a PhD in AI-related fields and working on transformative technologies that shape the future.</p>
+            <p>Beyond my professional pursuits, I enjoy a variety of hobbies that keep me balanced and inspired. These include playing the guitar, experimenting with new recipes in the kitchen, horseback riding, and exploring the outdoors.</p>
+            <p>Through my work and personal passions, I aim to continuously grow, make meaningful contributions, and lead a fulfilling and well-rounded life.</p>
         </section>
     </main>
     <footer>
