--- a/resume.html
+++ b/resume.html
@@ -19,13 +19,15 @@
     <main>
         <section class="resume-section">
             <h1>My Resume</h1>
-            <p>View or download my resume below:</p>
-            <a href="resume.pdf" download>Download Resume (PDF)</a>
-            <iframe src="resume.pdf" width="100%" height="600px"></iframe>
+            <p>You can view my resume directly below or download it for later:</p>
+            <!-- Download Button -->
+            <a href="Resume2024new.pdf" download class="download-btn">Download Resume (PDF)</a>
+            <!-- Embedded PDF Viewer -->
+            <iframe src="Resume2024new.pdf" width="100%" height="600px"></iframe>
         </section>
     </main>
     <footer>
-        <p>© 2025 [Your Name]. All rights reserved.</p>
+        <p>© 2025 [Praveen S Sinha]. All rights reserved.</p>
     </footer>
 </body>
 </html>
