--- a/index.html
+++ b/index.html
@@ -19,18 +19,18 @@
     <main>
         <section class="hero">
             <h1>Welcome to My Website</h1>
-            <p>Hi, I'm [Your Name]! Explore my projects, learn about my skills, and download my resume.</p>
+            <p>Hi, I'm Praveen Sinha! Explore my projects, learn about my skills, and download my resume.</p>
             <div class="social-links">
                 <p>Connect with me:</p>
                 <ul>
-                    <li><a href="https://www.linkedin.com/in/your-linkedin-profile" target="_blank">LinkedIn</a></li>
-                    <li><a href="https://github.com/your-github-username" target="_blank">GitHub</a></li>
+                    <li><a href="https://www.linkedin.com/in/praveen-s-sinha/" target="_blank">LinkedIn</a></li>
+                    <li><a href="https://github.com/praveens-coder/" target="_blank">GitHub</a></li>
                 </ul>
             </div>
         </section>
     </main>
     <footer>
-        <p>© 2025 [Praveen S Sinha]. All rights reserved.</p>
+        <p>© 2025 Praveen Sinha. All rights reserved.</p>
     </footer>
 </body>
 </html>
